--- a/front/addProblem.html
+++ b/front/addProblem.html
@@ -10,7 +10,7 @@
 </head>
 <body class="h-100">
     <header class="navbar navbar-light bg-dark text-white shadow-lg">
-        <a href="#" class="navbar-brand text-white">
+        <a href="./cardList.html" class="navbar-brand text-white">
             <h3>Logo</h3>
         </a>
 
