--- a/front/cardList.html
+++ b/front/cardList.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Problem List</title>
 </head>
 <body>
     <header class="navbar navbar-light bg-dark text-white shadow-lg">
-        <a href="#" class="navbar-brand text-white">
+        <a href="./cardList.html" class="navbar-brand text-white">
             <h3>Logo</h3>
         </a>
         
@@ -20,7 +20,7 @@
             <div class="dropdown my-2 my-sm-0"></div>
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"></button>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">Settings</a>
+                    <a class="dropdown-item" href="./settings.html">Settings</a>
                     <a class="dropdown-item" href="#">Log off</a>
                 </div>
             </div>
@@ -31,10 +31,12 @@
     <div class="container" style="min-width:50%" id="cardContainer">
         <div class="card text-left m-2 shadow custom-card">
             <div class="card-body" id="cardTemplate">
-                <h3 class="card-title">Title</h4>   
-                <p class="card-text" style="min-height: 100px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum sequi officiis asperiores sed quas fugit cum vero, quia odio perspiciatis rerum repellat hic earum repudiandae, necessitatibus quis consectetur fuga voluptatem!</p>
-                <a href="#" id="cardBtn" class="btn btn-primary float-right">Coins: 0</a>
-            </div>
+                <h3 class="card-title">Title</h3>   	
+				<div class="cope_text line-clamp">
+				<p class="card-text" style="min-height: 100px; max-height: 100px" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum sequi officiis asperiores sed quas fugit cum vero, quia odio perspiciatis rerum repellat hic earum repudiandae, necessitatibus quis consectetur fuga voluptatem!</p>
+                </div>
+				<a href="#" id="cardBtn" class="btn btn-primary float-right" style="margin-top:10px" >Coins: 0</a>
+				
         </div>
     </div>
 
