--- a/front/addProblem.html
+++ b/front/addProblem.html
@@ -10,7 +10,7 @@
 </head>
 <body class="h-100">
     <header class="navbar navbar-light bg-dark text-white shadow-lg">
-        <a href="#" class="navbar-brand text-white">
+        <a href="./cardList.html" class="navbar-brand text-white">
             <h3>Logo</h3>
         </a>
 
@@ -24,13 +24,12 @@
                     <a class="dropdown-item" href="#">Log off</a>
                 </div>
             </div>
-            
         </div>  
     </header>
 
     <div class="container" style="min-width: 40%; margin-top: 4%">
         <div class="row"></div>
-        <form class="rounded border p-4 m-3 shadow-lg" method="GET" action="http://52.233.199.97:1488/login">
+        <form class="rounded border p-4 m-3 shadow-lg" method="GET" action="http://52.233.199.97:1488/create_task">
             <input type="hidden" name="customer" value="ddd"> 
             <div class="form-group">
                 <h1>Please describe problem</h2>
