--- a/front/cardList.html
+++ b/front/cardList.html
@@ -18,7 +18,7 @@
             <h4 class="mr-sm-2">Carma:</h4>
             <h4 id="Carma" class="mr-sm-4">0</h4>
             <div class="dropdown my-2 my-sm-0"></div>
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"></button>
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"></button>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="#">Settings</a>
                     <a class="dropdown-item" href="#">Log off</a>
@@ -29,17 +29,19 @@
     </header>
 
     <div class="container" style="min-width:50%" id="cardContainer">
-        <div class="card text-left m-2 shadow custom-card">
+        <div class="card text-left m-2 shadow custom-card custom-card d-none" id="card">
             <div class="card-body" id="cardTemplate">
                 <h3 class="card-title">Title</h4>   
-                <p class="card-text" style="min-height: 100px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum sequi officiis asperiores sed quas fugit cum vero, quia odio perspiciatis rerum repellat hic earum repudiandae, necessitatibus quis consectetur fuga voluptatem!</p>
+                <p class="card-text" style="min-height: 100px"></p>
                 <a href="#" id="cardBtn" class="btn btn-primary float-right">Coins: 0</a>
             </div>
         </div>
     </div>
 
+    <span class="glyphicon glyphicon-search">ff</span>
     <!--<a class="btn btn-primary rounded-circle align-text-top" style="font-size: 6em" href="#" role="button">+</a>-->
 
+    
     <script src="list.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
