--- a/front/settings.html
+++ b/front/settings.html
@@ -11,7 +11,7 @@
 </HEAD>
 
 <BODY>
-	<header class="navbar navbar-light bg-dark text-white shadow-lg">
+	<header class="navbar navbar-light bg-primary text-white shadow-lg">
         <a href="./cardList.html" class="navbar-brand text-white">
             <h3>Logo</h3>
         </a>
