--- a/front/problemSingle.html
+++ b/front/problemSingle.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <header class="navbar navbar-light bg-dark text-white shadow-lg">
+    <header class="navbar navbar-light bg-primary text-white shadow-lg">
         <a href="./cardList.html" class="navbar-brand text-white">
             <h3>Logo</h3>
         </a>
