--- a/front/settings.html
+++ b/front/settings.html
@@ -37,18 +37,18 @@
 			<form class="rounded border p-3 m-3 shadow-lg">
 				<div class="row justify-content-center">
 					<div class="col-xs-10 col-sm-10 col-md-6 col-lg-6 col-xl-5">
-						<br><h3>Смена логина</h3>
-						<p>Новый логин</p>
-						<input type="text" class="form-control" id="" required placeholder="Введите новый логин" pattern="[A-Za-zА-Яа-яЁё-0-9]{50}"><br>
-						<button type="submit" formaction="#" class="btn btn-primary">Сохранить изменения</button>
-						<br><br><h3>Смена пароля</h3>
-						<p>Текущий пароль</p>
-						<input type="text" class="form-control"id="" required placeholder="Введите текущий пароль"><br>
-						</p>Новый пароль</p>
-						<input type="text" class="form-control"id="" required placeholder="Введите новый пароль" pattern="[A-Za-zА-Яа-яЁё-0-9]{50}"><br>
-						<p>Подтвердите новый пароль</p>
-						<input type="text" class="form-control"id="" required placeholder="Введите новый пароль" pattern="[A-Za-zА-Яа-яЁё-0-9]{50}"><br>
-						<button type="submit" formaction="#" class="btn btn-primary">Сохранить изменения</button>
+						<br><h3>Change your login</h3>
+						<p>New login</p>
+						<input type="text" class="form-control" id="" required placeholder="Enter new login" pattern="[A-Za-zА-Яа-яЁё-0-9]{50}"><br>
+						<button type="submit" formaction="#" class="btn btn-primary">Save changes</button>
+						<br><br><h3>Change your password</h3>
+						<p>Current password</p>
+						<input type="text" class="form-control"id="" required placeholder="Enter current password"><br>
+						</p>New password</p>
+						<input type="text" class="form-control"id="" required placeholder="Enter new password" pattern="[A-Za-zА-Яа-яЁё-0-9]{50}"><br>
+						<p>Confirm new password</p>
+						<input type="text" class="form-control"id="" required placeholder=Enter new password" pattern="[A-Za-zА-Яа-яЁё-0-9]{50}"><br>
+						<button type="submit" formaction="#" class="btn btn-primary">Save changes</button>
 						<br><br><br>
 					</div>	
 				</div>
