--- a/front/cardList.html
+++ b/front/cardList.html
@@ -15,7 +15,7 @@
         </a>
         
         <div class="form-inline">
-            <h4 class="mr-sm-2">Carma:</h4>
+            <h4 class="mr-sm-2">Coins:</h4>
             <h4 id="Carma" class="mr-sm-4">0</h4>
             <div class="dropdown my-2 my-sm-0"></div>
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"></button>
