--- a/front/problemSingle.html
+++ b/front/problemSingle.html
@@ -30,7 +30,7 @@
           
     </header>
 
-	<div class="container" style="min-width:50%" id="cardContainer">
+	<div class="container" style="min-width:50%; margin-top: 4%" id="cardContainer">
 			<div class="card text-left m-2 shadow custom-card">
 				<div class="card-body" id="cardTemplate">
 					<h3 class="card-title">Title</h3> 
