--- a/front/addProblem.html
+++ b/front/addProblem.html
@@ -43,7 +43,7 @@
                 <textarea type="text" name="problem_descrition" style="min-height: 300px;" class="form-control text-wrap shadow-sm" placeholder="Description" aria-describedby="helpId"></textarea>
             </div>
             <div class="form-group">
-                <label>Karma:</label>
+                <label>Coins:</label>
                 <input type="text" name="coins" pattern="^[ 0-9]+$" class="form-control w-25 shadow-sm" placeholder="Cost of karma" aria-describedby="helpId">
             </div>
             <button type="submit" class="btn btn-primary m-2 w-100 shadow-sm">Create</button>
