--- a/front/settings.html
+++ b/front/settings.html
@@ -20,7 +20,7 @@
             <h4 class="mr-sm-2">Coins:</h4>
             <h4 id="Carma" class="mr-sm-4">0</h4>
             <div class="dropdown my-2 my-sm-0"></div>
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"></button>
+                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"></button>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="./settings.html">Settings</a>
                     <a class="dropdown-item" href="#">Log off</a>
