--- a/front/addProblem.html
+++ b/front/addProblem.html
@@ -44,7 +44,7 @@
             </div>
             <div class="form-group">
                 <label>Coins:</label>
-                <input type="text" name="coins" pattern="^[ 0-9]+$" class="form-control w-25 shadow-sm" placeholder="Cost of karma" aria-describedby="helpId">
+                <input type="text" name="coins" pattern="^[ 0-9]+$" class="form-control w-25 shadow-sm" placeholder="Cost of coins" aria-describedby="helpId">
             </div>
             <button type="submit" class="btn btn-primary m-2 w-100 shadow-sm">Create</button>
         </form>
