--- a/front/cardList.html
+++ b/front/cardList.html
@@ -36,7 +36,7 @@
 				    <p class="card-text" style="min-height: 100px; max-height: 100px" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum sequi officiis asperiores sed quas fugit cum vero, quia odio perspiciatis rerum repellat hic earum repudiandae, necessitatibus quis consectetur fuga voluptatem!</p>
                 </div>
 				<a href="#" id="cardBtn" class="btn btn-primary float-right" style="margin-top:10px" >Coins: 0</a>
-				
+				<a href="#" id="cardBtn" class="btn btn-primary float-left disabled"   style="margin-top:10px" >Customer</a>
         </div>
     </div>
     
